# axum-mongov2

./: Cargo.toml
src/: auth.rs  db.rs  error.rs  main.rs
src/models/: model.rs
src/routes/: route.rs
