[package]
name = "rust-crud-axum"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mongodb = "2"
bcrypt = "0.13"
jsonwebtoken = "8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "std"] }
thiserror = "1"
dotenv = "0.15.0"
lazy_static = "1.4"
futures = "0.3"
